# 0ma

./: .gitignore  .oxlintrc.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE-APACHE  Makefile  README.md  STRUCTURED_YAML_USAGE.md  components.json  eslint.config.js  go.mod  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  website.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
lima-vm-manager/: .eslintrc.js  .gitignore  eslint.config.js  jest.config.js  package-lock.json  package.json  tailwind.config.js
lima-vm-manager/.cargo/: config.toml
lima-vm-manager/src/: App.tsx  jest.config.js  main.tsx
lima-vm-manager/src-tauri/: Cargo.toml  tauri.conf.json
lima-vm-manager/src-tauri/src/: lib.rs  main.rs
lima-vm-manager/src-tauri/src/models/: cli_tools.rs  config.rs  error.rs  events.rs  mod.rs  state.rs  vm.rs
lima-vm-manager/src-tauri/src/services/: cli_detection.rs  config.rs  events.rs  logging.rs  mod.rs  state.rs  vm_config.rs  vm_management.rs  vm_monitoring.rs
lima-vm-manager/src-tauri/src/testing/: contract_tests.rs  mod.rs
lima-vm-manager/src-tauri/src/tests/: integration_tests.rs  mod.rs
lima-vm-manager/src-tauri/tests/: basic_tests.rs  contract_tests.rs  integration_tests.rs
public/: robots.txt  sitemap.xml
scripts/: convert.ts  generate-tray-icon.ts  generate.ts
src/: App.tsx  _App.tsx  index.css  main.tsx
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: instance_registry.rs  instance_registry_handler.rs  instance_registry_service.rs  k8s_handler.rs  k8s_log_handler.rs  k8s_log_service.rs  k8s_service.rs  k8s_service_structs_snippet.rs  lib.rs  lima_config.rs  lima_config_handler.rs  lima_config_service.rs  lima_handler.rs  lima_instance.rs  lima_instance_handler.rs  lima_instance_service.rs  lima_service.rs  main.rs  state.rs  structured_example.rs  terminal_handler.rs  terminal_manager.rs  terminal_persistence.rs  terminal_service.rs  tray_handler.rs  yaml_handler.rs
src/components/: AGENTS.md  (+85 more)
website/: WebsitePage.tsx  demo-frame-entry.tsx  demo-frame.html  index.html  main.tsx  website.css
(+192 files in other folders)
