[package]
name = "zeroma"
version = "0.1.0"
description = "A Tauri App"
authors = ["Hung-Han Chen <chenhungh@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zeroma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
flume = "0.11"
sysinfo = "0.37"
portable-pty = "0.9.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
tauri-plugin-store = "2"
uuid = { version = "1", features = ["v4"] }

